tests/func/parsing/error_reporting/parsing_errors.err
/parsing/error_reporting/parsing_errors.input:1:10: syntax error: unexpected token +
    1 | id + id * + id
      |           ^^^ expected: ( id